# sfac

./: .gitignore  README.md  flake.nix  sr.yaml
.devcontainer/: devcontainer.json
ctdbase-relations/: pyproject.toml
ctdbase-relations/sfac_ctdbase_relations/: __init__.py
feedback/: index.html
finetune-answers/: pyproject.toml
finetune-answers/sfac_finetune_answers/: __init__.py
gpt-label/: pyproject.toml
gpt-label/sfac_gpt_label/: __init__.py
gpt4-label/: pyproject.toml
gpt4-label/sfac_gpt4_label/: __init__.py
openai-label/: pyproject.toml
openai-label/sfac_openai_label/: __init__.py
src/resources/public/: recogito.html
