[tool.poetry]
name = "sfac-ctdbase-relations"
version = "0.1.0"
description = ""
authors = ["John Shaffer <john@insilica.co>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
pyarrow = "^11.0.0"
biopython = "^1.81"
requests = "^2.28.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
