[tool.poetry]
name = "sfac-gpt4-label"
version = "0.1.0"
description = ""
authors = ["John Shaffer <john@insilica.co>"]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.2"
tiktoken = "^0.3.1"
jsonschema = "^4.17.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
